--- a/test/suites/special-cases/test-workflows/edge-cases-expected-fails.yaml
+++ b/test/suites/special-cases/test-workflows/edge-cases-expected-fails.yaml
@@ -9,8 +9,15 @@ spec:
   - execute:
       workflows:
       - name: expected-fail-cypress-incorrect-repo-path
+      - name: expected-fail-cypress-incorrect-repo-path-cone-mode
       - name: expected-fail-cypress-incorrect-image-name
       - name: expected-fail-cypress-incorrect-workingdir
       - name: expected-fail-cypress-resource-limits
       - name: expected-fail-cypress-artifacts-condition-always-with-artifacts
       - name: expected-fail-k6-test-report-condition-always-no-artifacts
+      - name: expected-fail-timeout-activedeadlineseconds
+      - name: expected-fail-timeout-step
+      - name: expected-fail-private-registry-auth
+      - name: expected-fail-private-repo-auth
+      - name: expected-fail-missing-git-secret
+      - name: expected-fail-missing-env-secret
