--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -1,14 +1,10 @@
-name: Docker images building and pushing for API and executors
+name: New Docker images builds and pushing for API and executors
 on:
   push:
 #    tags:
 #      - "v[0-9]+.[0-9]+.[0-9]+-"
     branches:
       - ci/add-builds-to-depot
-
-env:
-  ALPINE_IMAGE: alpine:3.20.3
-  BUSYBOX_IMAGE: busybox:1.36.1-musl
 
 permissions:
   id-token: write # needed for keyless signing with cosign and for depot
@@ -60,6 +56,4 @@ jobs:
           SLACK_BOT_CLIENT_SECRET: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_SECRET}}
           SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_SEGMENTIO_KEY}}
           CLOUD_SEGMENTIO_KEY: ${{secrets.TESTKUBE_API_CLOUD_SEGMENTIO_KEY}}
-          ALPINE_IMAGE: ${{ env.ALPINE_IMAGE }}
-          BUSYBOX_IMAGE: ${{ env.BUSYBOX_IMAGE }}
 
