--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -5,6 +5,9 @@ on:
 #      - "v[0-9]+.[0-9]+.[0-9]+-"
     branches:
       - ci/add-builds-to-depot
+env:
+  ALPINE_IMAGE: alpine:3.20.3
+  BUSYBOX_IMAGE: busybox:1.36.1-musl
 
 permissions:
   id-token: write # needed for keyless signing with cosign and for depot
@@ -50,6 +53,8 @@ jobs:
           push: false
           sbom: true
         env:
+          ALPINE_IMAGE: ${{ env.ALPINE_IMAGE }}
+          BUSYBOX_IMAGE: ${{ env.BUSYBOX_IMAGE }}
           VERSION: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.version'] }}
           GIT_SHA: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.revision'] }}
           SLACK_BOT_CLIENT_ID: ${{secrets.TESTKUBE_SLACK_BOT_CLIENT_ID}}
