--- a/test/jmeter/executor-tests/crd-workflow/smoke.yaml
+++ b/test/jmeter/executor-tests/crd-workflow/smoke.yaml
@@ -35,6 +35,9 @@ metadata:
   labels:
     core-tests: workflows
 spec:
+  config:
+    abrakadabra:
+      type: string
   content:
     git:
       uri: https://github.com/kubeshop/testkube
