--- a/test/suites/test-workflows/jmeter-workflow.yaml
+++ b/test/suites/test-workflows/jmeter-workflow.yaml
@@ -10,6 +10,7 @@ spec:
       parallelism: 2
       workflows:
       - name: jmeter-workflow-smoke
+      - name: jmeter-workflow-smoke-justb4-5.5
       - name: jmeter-workflow-smoke-shell-artifacts
       - name: jmeter-workflow-smoke-from-template
       - name: distributed-jmeter-workflow-smoke
