--- a/test/jmeter/executor-tests/crd-workflow/smoke.yaml
+++ b/test/jmeter/executor-tests/crd-workflow/smoke.yaml
@@ -111,7 +111,65 @@ spec:
   steps:
   - name: Run from template
     template:
+      name: official/jmeter/v2
+      config:
+        run: "jmeter -n -t jmeter-executor-smoke.jmx -j /data/artifacts/jmeter.log -o /data/artifacts/report -l /data/artifacts/jtl-report.jtl -e"
+    artifacts:
+      paths:
+      - '/data/artifacts/**/*'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: jmeter-workflow-smoke-from-template-v1
+  labels:
+    core-tests: workflows
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+  container:
+    resources:
+      requests:
+        cpu: 512m
+        memory: 512Mi
+    workingDir: /data/repo/test/jmeter/executor-tests
+  steps:
+  - name: Run from template
+    template:
       name: official/jmeter/v1
+      config:
+        run: "jmeter -n -t jmeter-executor-smoke.jmx -j /data/artifacts/jmeter.log -o /data/artifacts/report -l /data/artifacts/jtl-report.jtl -e"
+    artifacts:
+      paths:
+      - '/data/artifacts/**/*'
+---
+apiVersion: testworkflows.testkube.io/v1
+kind: TestWorkflow
+metadata:
+  name: jmeter-workflow-smoke-from-template-separate-artifacts-step
+  labels:
+    core-tests: workflows
+spec:
+  content:
+    git:
+      uri: https://github.com/kubeshop/testkube
+      revision: main
+      paths:
+      - test/jmeter/executor-tests/jmeter-executor-smoke.jmx
+  container:
+    resources:
+      requests:
+        cpu: 512m
+        memory: 512Mi
+    workingDir: /data/repo/test/jmeter/executor-tests
+  steps:
+  - name: Run from template
+    template:
+      name: official/jmeter/v2
       config:
         run: "jmeter -n -t jmeter-executor-smoke.jmx -j /data/artifacts/jmeter.log -o /data/artifacts/report -l /data/artifacts/jtl-report.jtl -e"
     steps:
@@ -119,7 +177,7 @@ spec:
       workingDir: /data/artifacts
       artifacts:
         paths:
-        - '**/*'
+        - '/data/artifacts/**/*'
 ---
 apiVersion: testworkflows.testkube.io/v1
 kind: TestWorkflow
