fix: storing execution parameters
Signed-off-by: Vladislav Sukhin <vladislav@kubeshop.io>

--- a/api/v1/testkube.yaml
+++ b/api/v1/testkube.yaml
@@ -9921,13 +9921,21 @@ components:
         value:
           type: string
           description: configuration value
+        emptyValue:
+          type: boolean
+          description: configuration value is empty
         defaultValue:
           type: string
           description: configuration value default
+        emptyDefaultValue:
+          type: boolean
+          description: configuration value default is empty
         truncated:
           type: boolean
           description: indicates if the value is truncated
-
+        sensitive:
+          type: boolean
+          description: marks value as sensitive
 
     TestWorkflowConfigValue:
       type: object
